# exofile

./: .gitignore  Example.ipynb  Exoplanet_Archive_Column_Mapping_CSV.csv  LICENSE  MANIFEST.in  README.md  Test_masterfile.ipynb  masterfile_custom.ecsv  setup.cfg  setup.py
exofile/: __init__.py  archive.py  config.py  default_param.yaml  exceptions.py  table_custom.py  utils.py
extras/: generate_test_data.py  migrate_google_sheet.py  migrate_tables.py  update_file.py
masterfile/: archive.py  config.py  default_param.yaml  exceptions.py  table_custom.py
tests/data/: single_param.csv  two_params.csv
