[metadata]
name = masterfile
description = A complete exoplanet archive table.
long_description = file: README.md
long_description_content_type = text/markdown
author = Antoine Darveau-Bernier
author_email = adb@astro.umontreal.ca
url = https://github.com/AntoineDarveau/masterfile
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy
    requests
    pyyaml


[options.extras_require]
dev =
    ipython
    jupyter
    astroplan
