[metadata]
name = exofile
description = A complete exoplanet archive table.
long_description = file: README.md
long_description_content_type = text/markdown
author = Antoine Darveau-Bernier
author_email = antoine.darveau@gmail.com
url = https://github.com/AntoineDarveau/exofile
license = MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy
    astropy
    requests
    pyyaml


[options.extras_require]
dev =
    ipython
    jupyter
    astroplan
    matplotlib
