[metadata]
name = exofile
description = A complete exoplanet archive table.
long_description = file: README.md
long_description_content_type = text/markdown
author = Antoine Darveau-Bernier
author_email = antoine.darveau@gmail.com
url = https://github.com/AntoineDarveau/exofile
license = MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy
    astropy >= 0.4.4
    requests
    pyyaml
    astroquery
    pandas


[options.extras_require]
dev =
    ipython < 8
    jupyter
    astroplan
    matplotlib
